// Vitest Snapshot v1

exports[`should return project coya diagram: /cases/01_simple 1`] = `
{
  "blocks": {
    "a_29867": {
      "from": "b_30247",
      "label": "",
      "to": "b_30244",
      "type": "line",
    },
    "a_29868": {
      "from": "b_30247",
      "label": "",
      "to": "b_30245",
      "type": "line",
    },
    "a_29869": {
      "from": "b_30247",
      "label": "",
      "to": "b_30246",
      "type": "line",
    },
    "a_29870": {
      "from": "b_30247",
      "label": "",
      "to": "b_30247",
      "type": "line",
    },
    "a_29871": {
      "from": "b_30244",
      "label": "",
      "to": "b_30248",
      "type": "line",
    },
    "b_30244": "/add.ts",
    "b_30245": "/index.ts",
    "b_30246": "/tsconfig.json",
    "b_30247": "/",
    "b_30248": "/add.ts/add",
  },
  "name": "coya-ts-analyzer",
  "phases": [],
  "style": {
    "blocks": {
      "_": {
        "css": {
          "text": {
            "fontSize": "auto",
          },
        },
      },
      "_file": {
        "css": {
          "color": "#ffffffff",
          "fill": "#008781ff",
          "fillStyle": "solid",
        },
      },
      "_folder": {
        "css": {
          "color": "#ffffffff",
          "fill": "#f67c01ff",
          "fillStyle": "solid",
        },
      },
      "_func": {
        "css": {
          "color": "#ffffffff",
          "fill": "#2097f3ff",
          "fillStyle": "solid",
        },
      },
      "b_30244": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "300",
          "y": "950",
        },
      },
      "b_30245": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "950",
          "y": "950",
        },
      },
      "b_30246": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "1600",
          "y": "950",
        },
      },
      "b_30247": {
        "css": {
          "get": "_folder",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "950",
          "y": "300",
        },
      },
      "b_30248": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "300",
          "y": "1600",
        },
      },
    },
  },
}
`;

exports[`should return project coya diagram: /cases/02_function 1`] = `
{
  "blocks": {
    "a_29873": {
      "from": "b_30251",
      "label": "",
      "to": "b_30249",
      "type": "line",
    },
    "a_29874": {
      "from": "b_30251",
      "label": "",
      "to": "b_30250",
      "type": "line",
    },
    "a_29875": {
      "from": "b_30251",
      "label": "",
      "to": "b_30251",
      "type": "line",
    },
    "a_29876": {
      "from": "b_30249",
      "label": "",
      "to": "b_30252",
      "type": "line",
    },
    "a_29877": {
      "from": "b_30249",
      "label": "",
      "to": "b_30253",
      "type": "line",
    },
    "b_30249": "/index.ts",
    "b_30250": "/tsconfig.json",
    "b_30251": "/",
    "b_30252": "/index.ts/func1",
    "b_30253": "/index.ts/func2",
  },
  "name": "coya-ts-analyzer",
  "phases": [],
  "style": {
    "blocks": {
      "_": {
        "css": {
          "text": {
            "fontSize": "auto",
          },
        },
      },
      "_file": {
        "css": {
          "color": "#ffffffff",
          "fill": "#008781ff",
          "fillStyle": "solid",
        },
      },
      "_folder": {
        "css": {
          "color": "#ffffffff",
          "fill": "#f67c01ff",
          "fillStyle": "solid",
        },
      },
      "_func": {
        "css": {
          "color": "#ffffffff",
          "fill": "#2097f3ff",
          "fillStyle": "solid",
        },
      },
      "b_30249": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "625",
          "y": "950",
        },
      },
      "b_30250": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "1275",
          "y": "950",
        },
      },
      "b_30251": {
        "css": {
          "get": "_folder",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "950",
          "y": "300",
        },
      },
      "b_30252": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "300",
          "y": "1600",
        },
      },
      "b_30253": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "950",
          "y": "1600",
        },
      },
    },
  },
}
`;

exports[`should return project coya diagram: /cases/03_function_relation 1`] = `
{
  "blocks": {
    "a_29878": {
      "from": "b_30259",
      "label": "",
      "to": "b_30254",
      "type": "line",
    },
    "a_29879": {
      "from": "b_30259",
      "label": "",
      "to": "b_30255",
      "type": "line",
    },
    "a_29880": {
      "from": "b_30259",
      "label": "",
      "to": "b_30256",
      "type": "line",
    },
    "a_29881": {
      "from": "b_30259",
      "label": "",
      "to": "b_30257",
      "type": "line",
    },
    "a_29882": {
      "from": "b_30259",
      "label": "",
      "to": "b_30258",
      "type": "line",
    },
    "a_29883": {
      "from": "b_30259",
      "label": "",
      "to": "b_30259",
      "type": "line",
    },
    "a_29884": {
      "from": "b_30254",
      "label": "",
      "to": "b_30260",
      "type": "line",
    },
    "a_29885": {
      "from": "b_30254",
      "label": "",
      "to": "b_30261",
      "type": "line",
    },
    "a_29891": {
      "from": "b_30255",
      "label": "",
      "to": "b_30262",
      "type": "line",
    },
    "a_29892": {
      "from": "b_30254",
      "label": "",
      "to": "b_30266",
      "type": "line",
    },
    "a_29893": {
      "from": "b_30255",
      "label": "",
      "to": "b_30263",
      "type": "line",
    },
    "a_29894": {
      "from": "b_30255",
      "label": "",
      "to": "b_30264",
      "type": "line",
    },
    "a_29895": {
      "from": "b_30254",
      "label": "",
      "to": "b_30263",
      "type": "line",
    },
    "a_29896": {
      "from": "b_30258",
      "label": "",
      "to": "b_30265",
      "type": "line",
    },
    "b_30254": "/funcs.ts",
    "b_30255": "/index.ts",
    "b_30256": "/main.js",
    "b_30257": "/tsconfig.json",
    "b_30258": "/utils.ts",
    "b_30259": "/",
    "b_30260": "/funcs.ts/func2",
    "b_30261": "/funcs.ts/func3",
    "b_30262": "/index.ts/func1",
    "b_30263": "/index.ts/func3",
    "b_30264": "/index.ts/func4",
    "b_30265": "/utils.ts/utilFn",
    "b_30266": "/index.ts/func2",
  },
  "name": "coya-ts-analyzer",
  "phases": [],
  "style": {
    "blocks": {
      "_": {
        "css": {
          "text": {
            "fontSize": "auto",
          },
        },
      },
      "_file": {
        "css": {
          "color": "#ffffffff",
          "fill": "#008781ff",
          "fillStyle": "solid",
        },
      },
      "_folder": {
        "css": {
          "color": "#ffffffff",
          "fill": "#f67c01ff",
          "fillStyle": "solid",
        },
      },
      "_func": {
        "css": {
          "color": "#ffffffff",
          "fill": "#2097f3ff",
          "fillStyle": "solid",
        },
      },
      "b_30254": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "940",
          "y": "950",
        },
      },
      "b_30255": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "2585",
          "y": "950",
        },
      },
      "b_30256": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "3235",
          "y": "950",
        },
      },
      "b_30257": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "3885",
          "y": "950",
        },
      },
      "b_30258": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "4535",
          "y": "950",
        },
      },
      "b_30259": {
        "css": {
          "get": "_folder",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "3550",
          "y": "300",
        },
      },
      "b_30260": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "950",
          "y": "1600",
        },
      },
      "b_30261": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "1600",
          "y": "1600",
        },
      },
      "b_30262": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "2900",
          "y": "1600",
        },
      },
      "b_30263": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "2250",
          "y": "1600",
        },
      },
      "b_30264": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "3560",
          "y": "1600",
        },
      },
      "b_30265": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "4535",
          "y": "1600",
        },
      },
      "b_30266": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "300",
          "y": "1600",
        },
      },
    },
  },
}
`;

exports[`should return project coya diagram: /cases/04_vue 1`] = `
{
  "blocks": {
    "a_29897": {
      "from": "b_30275",
      "label": "",
      "to": "b_30267",
      "type": "line",
    },
    "a_29898": {
      "from": "b_30275",
      "label": "",
      "to": "b_30268",
      "type": "line",
    },
    "a_29899": {
      "from": "b_30275",
      "label": "",
      "to": "b_30269",
      "type": "line",
    },
    "a_29900": {
      "from": "b_30275",
      "label": "",
      "to": "b_30270",
      "type": "line",
    },
    "a_29901": {
      "from": "b_30275",
      "label": "",
      "to": "b_30271",
      "type": "line",
    },
    "a_29902": {
      "from": "b_30275",
      "label": "",
      "to": "b_30272",
      "type": "line",
    },
    "a_29903": {
      "from": "b_30275",
      "label": "",
      "to": "b_30273",
      "type": "line",
    },
    "a_29904": {
      "from": "b_30275",
      "label": "",
      "to": "b_30275",
      "type": "line",
    },
    "a_29914": {
      "from": "b_30267",
      "label": "",
      "to": "b_30277",
      "type": "line",
    },
    "a_29915": {
      "from": "b_30267",
      "label": "",
      "to": "b_30278",
      "type": "line",
    },
    "a_29916": {
      "from": "b_30273",
      "label": "",
      "to": "b_30279",
      "type": "line",
    },
    "a_29920": {
      "from": "b_30268",
      "label": "",
      "to": "b_30281",
      "type": "line",
    },
    "b_30267": "/cmp.vue",
    "b_30268": "/index.ts",
    "b_30269": "/package.json",
    "b_30270": "/pnpm-lock.yaml",
    "b_30271": "/shims",
    "b_30272": "/tsconfig.json",
    "b_30273": "/utils.ts",
    "b_30275": "/",
    "b_30277": "/cmp.vue/render",
    "b_30278": "/cmp.vue/setup",
    "b_30279": "/utils.ts/utilFn",
    "b_30281": "/index.ts/cmpFunc",
  },
  "name": "coya-ts-analyzer",
  "phases": [],
  "style": {
    "blocks": {
      "_": {
        "css": {
          "text": {
            "fontSize": "auto",
          },
        },
      },
      "_file": {
        "css": {
          "color": "#ffffffff",
          "fill": "#008781ff",
          "fillStyle": "solid",
        },
      },
      "_folder": {
        "css": {
          "color": "#ffffffff",
          "fill": "#f67c01ff",
          "fillStyle": "solid",
        },
      },
      "_func": {
        "css": {
          "color": "#ffffffff",
          "fill": "#2097f3ff",
          "fillStyle": "solid",
        },
      },
      "b_30267": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "950",
          "y": "950",
        },
      },
      "b_30268": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "1925",
          "y": "950",
        },
      },
      "b_30269": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "3225",
          "y": "950",
        },
      },
      "b_30270": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "3875",
          "y": "950",
        },
      },
      "b_30271": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "4525",
          "y": "950",
        },
      },
      "b_30272": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "300",
          "y": "950",
        },
      },
      "b_30273": {
        "css": {
          "get": "_file",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "2575",
          "y": "950",
        },
      },
      "b_30275": {
        "css": {
          "get": "_folder",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "2575",
          "y": "300",
        },
      },
      "b_30277": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "625",
          "y": "1600",
        },
      },
      "b_30278": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "1275",
          "y": "1600",
        },
      },
      "b_30279": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "2575",
          "y": "1600",
        },
      },
      "b_30281": {
        "css": {
          "get": "_func",
        },
        "position": {
          "h": "250",
          "w": "500",
          "x": "1925",
          "y": "1600",
        },
      },
    },
  },
}
`;
